add tr for desktop

--- a/app/views/shared/_desktop_about_me_section.html.erb
+++ b/app/views/shared/_desktop_about_me_section.html.erb
@@ -6,21 +6,21 @@
       <!-- Ліва колонка -->
       <div class="col-lg-7 col-xl-8 text-left mt-120px">
         <h2 class="know-me-more-h2" id="name">I'm <span class="home-color" id="color-name">Svitlana Lyzanets,</span> a Web Developer</h2>
-        <p class="know-me-more-text">
+        <p class="know-me-more-text", id="about">
           I am a designer with a fervent ambition to change the world through creativity. I always strive to develop designs that not only aesthetically attract but are also highly user-friendly and intuitively understandable for users. My goal is to transform your ideas into digital reality and assist you in achieving maximum success in your industry. Take a look at my works, and don't hesitate to reach out to me to embark on incredible projects together.
         </p>
       </div>
 
       <!-- Права колонка -->
       <div class="col-lg-5 col-xl-4 mt-120px ">
-        <p class="section-divider"><b>Name:</b> Simone Olivia</p>
+        <p class="section-divider"><b id="name-two">Name:</b> Simone Olivia</p>
         <p class="section-divider"><b>Email:</b> <a href="mailto:svitlanalyzanets@gmail.com" class="home-color">svitlanalyzanets@gmail.com</a></p>
-        <p class="section-divider"><b>Age:</b> 28</p>
-        <p class="section-divider"><b>From:</b> Los Angeles, California</p>
+        <p class="section-divider"><b id="age">Age:</b> 23</p>
+        <p class="section-divider"><b id="from">From:</b> Los Angeles, California</p>
         <div class="pt-4"></div>
-        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color">CV</a>
+        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color" id="cv">CV</a>
         <span>&nbsp;</span>
-        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color">Certificate</a>
+        <a href="Mykola_Lyzanets_CV.pdf" target="_blank" class="download-btn rounded-pill back-home-color" id="certificate">Certificate</a>
       </div>
     </div>
   </div>
