--- a/app/views/shared/_desktop_contact_section.html.erb
+++ b/app/views/shared/_desktop_contact_section.html.erb
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 pt-100px">
-        <div class="address-font p-0">LET’S WORK TOGETHER?</div>
+        <div class="address-font p-0" id="work">LET’S WORK TOGETHER?</div>
         <button class="address-btn fw-bold">Hire Me</button>
       </div>
       <div class="col-md-4 pt-200px">
         <div>
-          <p>Open to new collaborations</p>
+          <p id="collab">Open to new collaborations</p>
           <p class="home-color">lizanets.svitlana@gmail.com</p>
           <div class="social-icons">
             <a href="https://t.me/Svitlana_Lyzanets" target="_blank"><i class="ml-0 fab fa-telegram"></i></a>
