--- a/app/views/shared/_desktop_portfolio_section.html.erb
+++ b/app/views/shared/_desktop_portfolio_section.html.erb
@@ -1,6 +1,6 @@
 <section id="portfolio" style="height: 4000px;" class="section-resume">
   <div class="container">
-    <h1 class="text-center fw-bold text-9 pb-110px">Portfolio</h1>
+    <h1 class="text-center fw-bold text-9 pb-110px" id="portfolio-big">PORTFOLIO</h1>
     <div class="know-me-more-line"></div>
     <div class="row mt-120px border-around">
       <h4>LANDING PAGE</h4>
