--- a/app/views/shared/_desktop_testimonial_section.html.erb
+++ b/app/views/shared/_desktop_testimonial_section.html.erb
@@ -1,6 +1,6 @@
 <section id="testimonial-desktop" style="height: 860px;" class="testimonial text-center section-testimonial">
   <div class="container">
-    <h1 class="text-center fw-bold text-9 pb-110px">CLIENT SPEAK</h1>
+    <h1 class="text-center fw-bold text-9 pb-110px" id="client">CLIENT SPEAKS</h1>
     <div class="know-me-more-line"></div>
     <div class="row"></div>
     <div id="testimonial3" class="mt-200px carousel slide testimonial4_indicators testimonial4_control_button thumb_scroll_x swipe_x" data-ride="carousel" data-pause="hover" data-interval="5000" data-duration="2000">
