--- a/app/views/shared/_desktop_wha_i_do_section.html.erb
+++ b/app/views/shared/_desktop_wha_i_do_section.html.erb
@@ -1,6 +1,6 @@
-<section id="what-i-do" style="height: 1000px;" class="section-what-i-do">
+<section id="what-i-do" style="height: 1200px;" class="section-what-i-do">
   <div class="container">
-    <h1 class="text-center know-me-more pb-110px">What services do I provide?</h1>
+    <h1 class="text-center know-me-more pb-110px" id="service">What services do I provide?</h1>
     <div class="know-me-more-line"></div>
     <div class="container-service">
        <div class="row">
@@ -8,17 +8,17 @@
            <div class="col-md-6">
              <div class="service-box mt-120px">
                <div class="service-title">
-                 <h3>LANDING PAGE</h3>
+                 <h3 id="landing">LANDING PAGE</h3>
                </div>
                <div class="service-desc">
-                 <div class="btn btn-primary">from €250</div>
+                 <div class="btn btn-primary" id="price-two">from €250</div>
                </div>
              </div>
            </div>
            <div class="col-md-6">
              <div class="service-box mt-120px">
                <div class="service-title">
-                 <p>Creating a single-page website with a specific goal - to attract attention and encourage users to take a specific action, such as subscribing to a newsletter, registering for an event, or making a product purchase.</p>
+                 <p id="creating">Creating a single-page website with a specific goal - to attract attention and encourage users to take a specific action, such as subscribing to a newsletter, registering for an event, or making a product purchase.</p>
                </div>
              </div>
            </div>
@@ -28,17 +28,39 @@
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <h3>E-COMMERCE</h3>
+                 <h3 id="multi">Multi-page Website</h3>
                </div>
                <div class="service-desc">
-                 <div class="btn btn-primary">from €250</div>
+                 <div class="btn btn-primary" id="price-three">from €250</div>
                </div>
              </div>
            </div>
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <p>
+                 <p id="developing">
+                   Developing a comprehensive website with multiple pages that allows presenting diverse information about the company, products, and services.
+                 </p>
+               </div>
+             </div>
+           </div>
+         </div>
+
+         <div class="col-md-12 row-service">
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <h3 id="commerce">E-COMMERCE</h3>
+               </div>
+               <div class="service-desc">
+                 <div class="btn btn-primary" id="price-four">from €250</div>
+               </div>
+             </div>
+           </div>
+           <div class="col-md-6">
+             <div class="service-box pt-70px">
+               <div class="service-title">
+                 <p id="building">
                    Building an electronic platform for selling products or services online, with the capability to process orders, payments, and manage deliveries.
                  </p>
                </div>
@@ -50,17 +72,17 @@
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <h3>REDESIGN</h3>
+                 <h3 id="redesign">REDESIGN</h3>
                </div>
                <div class="service-desc">
-                 <div class="btn btn-primary">from €150</div>
+                 <div class="btn btn-primary" id="price">from €150</div>
                </div>
              </div>
            </div>
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <p>
+                 <p id="updating">
                    Updating and modernizing an existing website or design to enhance the user experience and improve its overall effectiveness.
                  </p>
                </div>
@@ -72,17 +94,17 @@
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <h3>BRANDING</h3>
+                 <h3 id="branding">BRANDING</h3>
                </div>
                <div class="service-desc">
-                 <div class="btn btn-primary">negotiable</div>
+                 <div class="btn btn-primary" id="negotiable">negotiable</div>
                </div>
              </div>
            </div>
            <div class="col-md-6">
              <div class="service-box pt-70px">
                <div class="service-title">
-                 <p>
+                 <p id="designing">
                    Designing guides, checklists, and informational materials for your brand.
                  </p>
                </div>
